--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -106,7 +106,10 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "types.d.ts"
+  ],
   "exclude": ["node_modules"]
 
 }
