--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.14.1",
+    "@types/session-file-store": "^1.2.5",
     "typescript": "^5.4.5"
   }
 }
